<resources>
    <string name="app_name">Android Modern</string>
    <string name="posts">Posts</string>
    <string name="products">Products</string>
    <string name="product">Product</string>
    <string name="calc">Calculator</string>
</resources>